--- a/src/scss/base/_index.scss
+++ b/src/scss/base/_index.scss
@@ -1,3 +1,3 @@
-@use "./accessibility";
-@use "./reset";
-@use "./utilities";
+@forward "./accessibility";
+@forward "./reset";
+@forward "./utilities";
