--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -5,71 +5,71 @@ Utility Classes
 Classes to quickly add utility styles to your components.
 ------------------------------------------------------------------
 */
-@import "media-queries";
+@use "../helpers/index" as *;
 
 /* Content Alignment
 ------------------------------------------------------------------*/
 .is-content-align-left {
-	text-align: left;
-	> * {
-		text-align: left;
-	}
+    text-align: left;
+    > * {
+        text-align: left;
+    }
 }
 
 .is-content-align-center {
-	text-align: center;
-	> * {
-		text-align: center;
-	}
+    text-align: center;
+    > * {
+        text-align: center;
+    }
 }
 
 .is-content-align-right {
-	text-align: right;
-	> * {
-		text-align: right;
-	}
+    text-align: right;
+    > * {
+        text-align: right;
+    }
 }
 
 /* Gutenberg Alignment
 	These are defaults in the editor. Need to manually add.
 ------------------------------------------------------------------*/
 .alignright {
-	float: right;
+    float: right;
 }
 
 .alignleft {
-	float: left;
+    float: left;
 }
 
 /* Image Styles
 ------------------------------------------------------------------*/
 .has-blur {
-	filter: blur(5px);
+    filter: blur(5px);
 }
 
 .has-grayscale {
-	filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 
 .has-blur-grayscale {
-	filter: blur(5px) grayscale(100%);
+    filter: blur(5px) grayscale(100%);
 }
 
 /* Section & Background Images
 ---------------------------------------- */
 .has-background-image {
-	position: relative;
-	overflow: hidden;
+    position: relative;
+    overflow: hidden;
 
-	> *:not(.background) {
-		position: relative;
-		z-index: 1;
-	}
+    > *:not(.background) {
+        position: relative;
+        z-index: 1;
+    }
 
-	.background {
-		display: contents;
-		&__img {
-			@include background-image();
-		}
-	}
+    .background {
+        display: contents;
+        &__img {
+            @include background-image();
+        }
+    }
 }
