--- a/src/scss/forms/_index.scss
+++ b/src/scss/forms/_index.scss
@@ -1,5 +1,5 @@
-@use "./checkbox";
-@use "./fieldset";
-@use "./label";
-@use "./select";
-@use "./text";
+@forward "./checkbox";
+@forward "./fieldset";
+@forward "./label";
+@forward "./select";
+@forward "./text";
