--- a/src/scss/helpers/index.scss
+++ b/src/scss/helpers/index.scss
@@ -1,3 +1,3 @@
-@forward "mixins";
-@forward "functions";
-@forward "media-queries";
+@forward "./mixins";
+@forward "./functions";
+@forward "./media-queries";
