Update SCSS files to fix deprecations and warnings.

--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -7,7 +7,7 @@ Helpers: Mixins
 ------------------------------------------------------------------
 */
 
-@use "./media-queries";
+@use "./media-queries" as *;
 
 //Grayscale
 @mixin grayscale_element($value) {
