--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -9,39 +9,20 @@ Helpers: Mixins
 
 @use "./media-queries" as *;
 
+// Button Reset
+@mixin button_reset() {
+    all: unset;
+    cursor: pointer;
+    font-family: inherit;
+    color: inherit;
+    text-decoration: none;
+}
+
 //Grayscale
 @mixin grayscale_element($value) {
     -webkit-filter: #{"grayscale(#{$value})"};
     -moz-filter: #{"grayscale(#{$value})"};
     filter: #{"grayscale(#{$value})"};
-}
-
-@mixin pattern_right() {
-    content: "";
-    display: block;
-    background-repeat: repeat;
-    right: 1.875rem;
-    top: 1.875rem;
-    height: calc(100% - 3.75rem);
-    width: 38%;
-    background-size: 99px auto;
-    position: absolute;
-    pointer-events: none;
-    z-index: 0;
-}
-
-@mixin pattern_left() {
-    content: "";
-    display: block;
-    background-repeat: repeat;
-    left: 1.875rem;
-    bottom: 1.875rem;
-    height: calc(100% - 3.75rem);
-    width: 38%;
-    background-size: 99px auto;
-    position: absolute;
-    pointer-events: none;
-    z-index: 0;
 }
 
 @mixin ms_flex_fix() {
@@ -64,10 +45,9 @@ Helpers: Mixins
 }
 
 //Uppercase
-@mixin uppercase() {
+@mixin uppercase($letter-spacing: 1.75px) {
     text-transform: uppercase;
-    letter-spacing: 1.75px;
-    font-weight: 300;
+    letter-spacing: $letter-spacing;
 }
 
 //Icon BG
@@ -92,21 +72,6 @@ Helpers: Mixins
     pointer-events: none;
 }
 
-@mixin section-padding() {
-    padding-bottom: var(--wp--preset--spacing--50);
-    padding-top: var(--wp--preset--spacing--50);
-
-    @include gt-sm() {
-        padding-bottom: var(--wp--preset--spacing--60);
-        padding-top: var(--wp--preset--spacing--60);
-    }
-
-    @include gt-lg() {
-        padding-bottom: var(--wp--preset--spacing--70);
-        padding-top: var(--wp--preset--spacing--70);
-    }
-}
-
 @mixin inner_area($block: null) {
     @if $block != null {
         &.is-layout-constrained {
@@ -127,17 +92,6 @@ Helpers: Mixins
         }
 
         > * {
-            padding-left: var(--wp--custom--spacing--gutter, 1rem);
-            padding-right: var(--wp--custom--spacing--gutter, 1rem);
-        }
-    }
-}
-
-// Add back padding that Gutenberg removes
-// @todo find a better/more global solution.
-@mixin restore_gutenberg_group_padding($block) {
-    :root :where(.wp-block-group) {
-        .#{$block} {
             padding-left: var(--wp--custom--spacing--gutter, 1rem);
             padding-right: var(--wp--custom--spacing--gutter, 1rem);
         }
