--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -11,11 +11,25 @@ Helpers: Mixins
 
 // Button Reset
 @mixin button_reset() {
-    all: unset;
-    cursor: pointer;
-    font-family: inherit;
+    background: none;
     color: inherit;
-    text-decoration: none;
+    border: none;
+    font: inherit;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+}
+
+// List Reset
+@mixin list_reset() {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+// Transition
+@mixin transition($property: all, $duration: 0.3s, $timing-function: ease) {
+    transition: $property $duration $timing-function;
 }
 
 //Grayscale
@@ -73,29 +87,29 @@ Helpers: Mixins
 }
 
 @mixin inner_area($block: null) {
-    @if $block != null {
-        &.is-layout-constrained {
-            .#{$block}__inner {
-                max-width: var(--wp--style--global--wide-size, 960px);
-            }
-        }
+    // @if $block != null {
+    //     &.is-layout-constrained {
+    //         .#{$block}__inner {
+    //             max-width: var(--wp--style--global--content-size, 1240px);
+    //         }
+    //     }
 
-        .#{$block}__inner {
-            padding-left: var(--wp--custom--spacing--gutter, 1rem);
-            padding-right: var(--wp--custom--spacing--gutter, 1rem);
-        }
-    } @else {
-        &.is-layout-constrained {
-            > * {
-                max-width: var(--wp--style--global--wide-size, 960px);
-            }
-        }
+    //     .#{$block}__inner {
+    //         padding-left: var(--wp--custom--spacing--gutter, 1rem);
+    //         padding-right: var(--wp--custom--spacing--gutter, 1rem);
+    //     }
+    // } @else {
+    //     &.is-layout-constrained {
+    //         > * {
+    //             max-width: var(--wp--style--global--content-size, 1240px);
+    //         }
+    //     }
 
-        > * {
-            padding-left: var(--wp--custom--spacing--gutter, 1rem);
-            padding-right: var(--wp--custom--spacing--gutter, 1rem);
-        }
-    }
+    //     > * {
+    //         padding-left: var(--wp--custom--spacing--gutter, 1rem);
+    //         padding-right: var(--wp--custom--spacing--gutter, 1rem);
+    //     }
+    // }
 }
 
 @mixin section() {
