--- a/src/scss/layout/_columns.scss
+++ b/src/scss/layout/_columns.scss
@@ -4,7 +4,7 @@
 /* Columns
 ---------------------------------------- */
 
-.columns {
+.wp-block-polaris-columns {
     display: flex;
     flex-wrap: nowrap;
     position: relative;
@@ -14,7 +14,7 @@
         flex-direction: column;
     }
 
-    .column {
+    .wp-block-polaris-column {
         min-width: 0;
         overflow-wrap: break-word;
         word-break: break-word;
