Update all class names.

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -11,20 +11,20 @@ This ensures that all browsers render elements consistently.
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-	min-height: 100vh;
-	text-rendering: optimizeSpeed;
-	line-height: 1.5;
+    min-height: 100vh;
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
 }
 
 /* Typography
 ----------------------------------------------------------------*/
 * {
-	font-style: inherit;
-	-webkit-font-smoothing: antialiased;
+    font-style: inherit;
+    -webkit-font-smoothing: antialiased;
 }
 
 h1,
@@ -33,22 +33,22 @@ h3,
 h4,
 h5,
 h6 {
-	overflow-wrap: break-word;
-	text-wrap: balance;
+    overflow-wrap: break-word;
+    text-wrap: balance;
 }
 
 p {
-	text-wrap: pretty;
+    text-wrap: pretty;
 }
 
 blockquote {
-	margin: 0;
-	quotes: inherit;
+    margin: 0;
+    quotes: inherit;
 }
 
 mark {
-	background-color: transparent;
-	color: inherit;
+    background-color: transparent;
+    color: inherit;
 }
 
 /* Lists
@@ -56,10 +56,10 @@ mark {
 
 ul,
 ol {
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-left: 1rem;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    padding-left: 1rem;
 }
 
 /* Media
@@ -69,14 +69,17 @@ picture,
 video,
 canvas,
 svg {
-	height: auto;
-	max-width: 100%;
+    height: auto;
+    max-width: 100%;
+}
+
+img {
+    /* Remove extra space from image below images*/
+    display: block;
 }
 
 figure {
-	margin-bottom: 0;
-	/* if block, bottom spacing is added. */
-	//display: flex; //breaks wordpress core/image where it breaks containment
+    margin-bottom: 0;
 }
 
 /* Forms
@@ -85,11 +88,11 @@ input,
 button,
 textarea,
 select {
-	font: inherit;
+    font: inherit;
 }
 
 /* Links
 ----------------------------------------------------------------*/
 :has(:target) {
-	scroll-padding-top: 3rem;
+    scroll-padding-top: 3rem;
 }
