--- a/src/scss/layout/_columns.scss
+++ b/src/scss/layout/_columns.scss
@@ -15,7 +15,7 @@
     }
 
     .wp-block-polaris-column {
-        min-width: 0;
+        min-width: 4rem;
         overflow-wrap: break-word;
         word-break: break-word;
         width: 100%;
