--- a/src/scss/layout/_columns.scss
+++ b/src/scss/layout/_columns.scss
@@ -22,14 +22,14 @@
         flex-direction: column;
         display: flex;
 
+        /* fix for gutenberg */
+        margin-block-start: 0;
+
         /* Needed for gutenberg - mainly wp-group blocks */
         .wp-block-group,
         & > * {
             width: 100%;
         }
-
-        // fix for gutenberg
-        margin-block-start: 0;
 
         @include gt-md() {
             &--auto {
