--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -91,6 +91,16 @@ select {
     font: inherit;
 }
 
+button {
+    background: none;
+    color: inherit;
+    border: none;
+    font: inherit;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+}
+
 /* Links
 ----------------------------------------------------------------*/
 :has(:target) {
