--- a/src/scss/gutenberg/_quirks.scss
+++ b/src/scss/gutenberg/_quirks.scss
@@ -9,7 +9,7 @@
 // }
 
 // Allow sticky to work with template parts
-.wp-block-template-part {
+.wp-block-template-part:not(header) {
 	display: contents;
 }
 
@@ -24,21 +24,25 @@
 	width: 100%;
 }
 
-/* Alignull within template parts within entry-contnet */
-.has-global-padding {
-	.wp-block-template-part {
-		.alignfull {
-			margin-left: calc(var(--wp--style--root--padding-left) * -1);
-			margin-right: calc(var(--wp--style--root--padding-right) * -1);
-		}
-	}
-}
-
 /* Remove padding on align-full blocks */
 :root
 	:where(.editor-styles-wrapper)
 	:where(.is-layout-constrained)
 	> .alignfull,
 .alignfull {
+	margin-block-start: 0;
+}
+
+// Override this gutenberg quirk:
+// :root :where(.wp-block-group) {
+//     padding: 0;
+// }
+.wp-block-group.has-global-padding {
+	padding-right: var(--wp--style--root--padding-right);
+	padding-left: var(--wp--style--root--padding-left);
+}
+
+// Remove margin on first block
+.wp-site-blocks > * {
 	margin-block-start: 0;
 }
