--- a/src/scss/gutenberg/_appenders.scss
+++ b/src/scss/gutenberg/_appenders.scss
@@ -128,15 +128,13 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	pointer-events: none;
+	cursor: pointer;
 	&:focus,
 	&:focus-within {
 		border: 1px solid var(--wp-admin-theme-color);
 	}
-
-	// Allow the button inside to be clickable
-	.built-block-appender-column__appender {
-		pointer-events: auto;
+	&:hover {
+		background-color: rgba(134, 134, 134, 0.1);
 	}
 }
 
