fix: remove "outline: none" on button reset. Mistake to add that, as it removes the foucs outline, and is not ADA compliant.

--- a/src/scss/gutenberg/_misc.scss
+++ b/src/scss/gutenberg/_misc.scss
@@ -44,3 +44,23 @@ Misc
 		display: none !important;
 	}
 }
+
+/* Full width button */
+.components-button.is-full-width {
+	justify-content: center;
+	width: 100%;
+}
+
+/* BaseControl in Panel */
+.components-panel__row {
+	.components-base-control {
+		width: 100%;
+	}
+}
+
+/* Panel Body */
+.components-panel__body {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+}
