--- a/src/scss/gutenberg/_appenders.scss
+++ b/src/scss/gutenberg/_appenders.scss
@@ -1,5 +1,16 @@
 /* stylelint-disable */
 
+// get lost on dark BGs.
+.block-editor-button-block-appender {
+	background-color: #fff !important;
+	color: #1e1e1e !important;
+
+	&:hover,
+	&:focus {
+		color: var(--wp-admin-theme-color, #007cba) !important;
+	}
+}
+
 .block-editor-inserter__toggle.components-button {
 	border: 1px solid #fff;
 }
@@ -128,7 +139,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	cursor: pointer;
 	&:focus,
 	&:focus-within {
 		border: 1px solid var(--wp-admin-theme-color);
